enviroments/apps/static/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  namespace: static
  labels:
    app: static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: static
          image: jmsamudio/jms:v3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index-file
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: static
  namespace: static
  labels:
    app: static
spec:
  ports:
  - name: static
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: alb-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/subnets: subnet-0c820c04ce5d9e310, subnet-0777ffd8b26161b38
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:405632504902:certificate/4e06880c-18b5-427c-b231-e970e33a416c
  name: static
  namespace: static
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  number: 80
